# scalable-llm

./: README.md  analyze_data.py  finetune.py  finetune_qwen.py  inference.py  inference_local.py  main.py  modal_tune.py  new_data.py  pyproject.toml
lebron_james/: lebron_interviews.jsonl  lebron_interviews_cleaned.jsonl
