[project]
name = "scalable-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.33.0",
    "beautifulsoup4>=4.14.2",
    "datasets>=4.4.1",
    "gradio>=6.0.1",
    "modal>=1.2.4",
    "numpy<2",
    "peft>=0.7.1",
    "requests>=2.32.5",
    "sentencepiece>=0.2.0",
    "setuptools>=80.9.0",
    "torch==2.2.2",
    "transformers>=4.43.0",
    "trl>=0.25.1",
]
